# cobot-poc

./: .gitignore  start.sh
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: sessions.py  telemetry.py  zones.py
backend/app/services/: influx_writer.py
infra/: docker-compose.yml
intelligence/path_planner/: boustrophedon.py  map_reader.py
simulation/ros2_ws/src/cobot_sim/: CMakeLists.txt  package.xml
simulation/ros2_ws/src/cobot_sim/config/: joy_params.yaml  nav2_params.yaml  slam_params.yaml
simulation/ros2_ws/src/cobot_sim/launch/: .sim_launch.py.swp  sim_launch.py
simulation/ros2_ws/src/cobot_sim/maps/: lab_map.yaml
simulation/ros2_ws/src/cobot_sim/nodes/: camera_viewer.py  depth_map_fusion.py  mqtt_bridge.py  waypoint_executor.py
simulation/ros2_ws/src/cobot_sim/urdf/: cobot.urdf.xacro
simulation/ros2_ws/src/cobot_sim/worlds/: lab_room.world
