<?xml version="1.0"?>
<package format="3">
  <name>cobot_sim</name>
  <version>0.0.1</version>
  <description>Cobot POC simulation package</description>
  <maintainer email="nandalal@forge-iv.co">forge</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
